--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-icons": "^5.0.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
